--- a/decorator-compiler/build.gradle
+++ b/decorator-compiler/build.gradle
@@ -13,4 +13,6 @@ dependencies {
     compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'com.google.truth', name: 'truth', version: '0.22'
+    testCompile group: 'com.google.testing.compile', name: 'compile-testing', version: '0.9'
 }
