--- a/decorator/build.gradle
+++ b/decorator/build.gradle
@@ -8,28 +8,21 @@ repositories {
 }
 
 dependencies {
-    compile project(':decorator')
-
-    compile 'com.squareup:javapoet:1.9.0'
-    compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc2'
-
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'com.google.truth', name: 'truth', version: '0.22'
-    testCompile group: 'com.google.testing.compile', name: 'compile-testing', version: '0.9'
 }
 
 ext {
     bintrayRepo = 'maven'
-    bintrayName = 'decorator-compiler'
+    bintrayName = 'decorator'
 
     publishedGroupId = 'com.hellostu.decorator'
-    libraryName = 'decorator-compiler'
-    artifact = 'decorator-compiler'
+    libraryName = 'decorator'
+    artifact = 'decorator'
 
     libraryDescription = 'Annotation processor for automatically generating boilerplate code of Decorator classes.'
 
-    siteUrl = 'https://github.com/hellostu/Decorator'
-    gitUrl = 'https://github.com:hellostu/Decorator.git'
+    siteUrl     = 'https://github.com/hellostu/Decorator'
+    gitUrl      = 'https://github.com:hellostu/Decorator.git'
 
     libraryVersion = '0.2.0'
 
