--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'decorator'
-include 'decorator-annotations'
+include 'decorator'
 include 'decorator-compiler'
+rootProject.name = 'decorator-parent'
